# projects

C/code/: d1  fitz  fitz.c  makefile
Java/Java project 1/source code/: runaway.map  save.map
Java/Java project 1/source code/.svn/: wc.db
Java/Java project 2/: Screen Recording 2019-11-21 at 11.30.06 pm.mov
Java/Java project 2/code/: demo.map
Java/Java project 3/code/: worldMap
Networking programming/Process:fork/code(with some test file)/: CMakeLists.txt  Hub.test_full_game_2.0.out  Hub.test_full_game_3.0.err  Makefile  Player.test_fullgame_1.0.err  Player.test_fullgame_1.0.out  austerity  austerity.c  banzai  banzai.c  deck.c  deck.h  ed  ed.c  err.txt  game.c  game.h  out.txt  output.txt  player.c  player.h  shenzi  shenzi.c
Networking programming/Thread/: demonstrate.docx
Networking programming/Thread/code/: CMakeLists.txt  Makefile  deck  gopher  gopher.c  gopher.h  rafiki  rafiki.c  rafiki.h  statfile  zazu  zazu.c  zazu.h
Networking programming/Thread/code/include/: deck.h  game.h  player.h  protocol.h  server.h  token.h  util.h
Networking programming/Thread/code/lib/: deck.c  game.c  player.c  protocol.c  server.c  token.c  util.c
Others(no video)/Algorithm/project 1/: hw1.docx
Others(no video)/Android Studio/virtual browser/: local.properties
Others(no video)/Python/some code/: a2.py  a2_support.py  letters.txt  scrabble.py  scrabble_gui.py
Others(no video)/Sql/: 44528731.docx  44528731.sql  script.sql
实战项目/网站-迎风租车网站/css/: style.css
实战项目/网站-迎风租车网站/images/: Workbook1 (2).xlsx
实战项目/网站-迎风租车网站/js/: script.js
(+201 files in other folders)
